Fixed a bug in readable paragraph content classes

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -151,7 +151,7 @@
 }
 
 /* Makes content readable width. Does not apply to pagebuilders and woocommerce */
-body:not(.elementor-page, .woocommerce-page) .readable-content {
+body:not(.elementor-page):not(.woocommerce-page) .readable-content {
     p, h2, h3, h4, h5, h6, ol, ul, pre, code, ins, mark, cite, em, b, strong, i, table, .wp-block-audio, .wp-block-file, .wp-block-embed-instagram, .wp-block-embed-twitter, .wp-block-button {
         margin-left: auto;
         margin-right: auto;
